<resources>
    <string name="app_name">LoginPage</string>
    <string name="rescue_alert">Rescue Alert</string>
    <string name="todo">TODO</string>
    <string name="username">Username</string>
    <string name="Login_to_continue">Login to continue</string>
    <string name="pin">PIN</string>
    <string name="login_button">Login</string>
    <string name="your_circle">Your Circle</string>
    <string name="rescue_alerts">RESCUE ALERT</string>
    <string name="add_family">Add Family</string>
    <string name="your_circles">\'\'your circle\'</string>
    <string name="track">Track</string>
    <string name="alert">!</string>
    <string name="Signup_here">Signup here</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_nav_activity">Nav_activity</string>
    <string name="nav_header_title">Rescue Alert</string>
    <string name="nav_header_subtitle">Preferences</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_profile">Profile</string>
    <string name="menu_logout">Logout</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="Authentication">Authentication</string>
    <string name="title_activity_location">Map</string>
    <string name="title_activity_nav_bar">NavBar</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="title_activity_drawer">Drawer</string>
    <string name="title_activity_drawer1">DrawerActivity</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_live_location">Map</string>
    <string name="title_activity_requested_location">Map</string>


</resources>