<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D35950"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Signup">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/alert_icon" />

    <TextView
        android:id="@+id/logo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bungee"
        android:text="@string/rescue_alert"
        android:textColor="#fff"
        android:textSize="40sp"
        tools:text="Rescue Alert" />

    <TextView
        android:id="@+id/phone_authentication"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/antic"
        android:textColor="#fff"
        android:textSize="18sp"
        android:text="@string/Authentication" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:orientation="vertical"
        android:padding="10dip">

        <EditText
            android:id="@+id/register_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="+XX-XXXXXXX"
            android:inputType="phone"
            android:paddingTop="20dp"
            android:textAlignment="center"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/send_code"
            style="@style/FirebaseUI.Button"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:text="Send code"
            android:textColor="@color/SeaGreen"
            android:background="@drawable/btn_background"/>

        <ProgressBar
            android:id="@+id/number_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <EditText
            android:id="@+id/register_code"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:ems="10"
            android:hint="XXXXXX"
            android:inputType="phone"
            android:paddingTop="40dp"
            android:paddingBottom="20dp"
            android:textAlignment="center"
            tools:ignore="HardcodedText" />

        <Button
            android:id="@+id/code_verify"
            android:layout_width="130dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="Verify Code"
            android:layout_marginTop="10dp"
            android:textColor="@color/BlueViolet"
            android:background="@drawable/btn_background"/>

        <ProgressBar
            android:id="@+id/code_progress_bar"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:visibility="gone" />

    </LinearLayout>


</LinearLayout>