<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D35950"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Signup">

    <ImageView
        android:id="@+id/logoImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:contentDescription="@string/todo"
        android:src="@drawable/alert_icon" />

    <TextView
        android:id="@+id/logo_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/bungee"
        android:text="@string/rescue_alert"
        android:textColor="#fff"
        android:textSize="40sp"
        tools:text="Rescue Alert" />

    <TextView
        android:id="@+id/logan_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/antic"
        android:textColor="#fff"
        android:textSize="18sp"
        android:text="@string/Signup_here" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="326dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/MobileNo"
            style="@style/AppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/White"
            app:counterTextColor="@color/White">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/register_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:ems="10"
                android:hint="Mobile Number (+92-XXXXXXX)"
                android:inputType="phone"
                android:paddingTop="20dp"
                tools:ignore="HardcodedText" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/pin"
            style="@style/AppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/White"
            android:textColorHint="@color/White"
            app:passwordToggleEnabled="true"
            app:passwordToggleTint="@color/White">

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="PIN"
                android:inputType="number"
                android:textColor="#FFFFFF"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textColorLink="#FFFFFF"
                android:textCursorDrawable="@color/White"
                app:textInputLayoutFocusedRectEnabled="false" />


        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/Email"
            style="@style/AppTheme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColorHint="@color/White">

            <com.google.android.material.textfield.TextInputEditText

                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Email"
                android:inputType="textWebEmailAddress"
                android:textColor="#FFFFFF"
                android:textColorHighlight="#FFFFFF"
                android:textColorHint="#FFFFFF"
                android:textColorLink="#FFFFFF"
                android:textCursorDrawable="@color/White" />


        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/register"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="0dp"
            android:background="@drawable/btn_background2"
            android:text="Register"
            android:textColor="@color/MediumSeaGreen" />

        <Button
            android:id="@+id/Login1"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_background2"
            android:elevation="0dp"
            android:text="Login here"
            android:textColor="#2196F3" />


    </LinearLayout>

</LinearLayout>